[package]
name = "raloword"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[dependencies]
rocket = "0.4"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
url = "2.1"
config = {version = "0.9", default-features = false, features = ["toml"]}
sled = "0.30"
log="0.4"
env_logger="0.7"
rand = "0.7"
